--- a/package.json
+++ b/package.json
@@ -40,5 +40,5 @@
   "devDependencies": {
     "gh-pages": "^4.0.0"
   },
-  "homepage": "https://luizCosta-Serao/luizCosta-Serao.github.io"
+  "homepage": "https://luizCosta-Serao.github.io/luizCosta-Serao.github.io"
 }
