--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-portfolio",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://luizCosta-Serao.github.io/luizCosta-Serao.github.io",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -39,6 +40,5 @@
   },
   "devDependencies": {
     "gh-pages": "^4.0.0"
-  },
-  "homepage": "https://luizCosta-Serao.github.io/luizCosta-Serao.github.io"
+  }
 }
